yolov5/nohup.out
Downloading: "https://github.com/ultralytics/yolov5/zipball/master" to /home/kim/.cache/torch/hub/master.zip
YOLOv5 🚀 2024-4-9 Python-3.10.12 torch-2.2.2+cu121 CPU

Fusing layers... 
YOLOv5s summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs
Adding AutoShape... 
 * Serving Flask app 'test'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.0.17:5000
[33mPress CTRL+C to quit[0m
Downloading: "https://github.com/ultralytics/yolov5/zipball/master" to /home/kim/.cache/torch/hub/master.zip
YOLOv5 🚀 2024-4-9 Python-3.10.12 torch-2.2.2+cu121 CPU

Fusing layers... 
YOLOv5s summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs
Adding AutoShape... 
 * Serving Flask app 'test'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.0.17:5000
[33mPress CTRL+C to quit[0m
Downloading: "https://github.com/ultralytics/yolov5/zipball/master" to /home/kim/.cache/torch/hub/master.zip
YOLOv5 🚀 2024-4-11 Python-3.10.12 torch-2.2.2+cu121 CPU

Fusing layers... 
YOLOv5s summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs
Adding AutoShape... 
 * Serving Flask app 'test'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:50001
 * Running on http://192.168.0.17:50001
[33mPress CTRL+C to quit[0m
Downloading: "https://github.com/ultralytics/yolov5/zipball/master" to /home/kim/.cache/torch/hub/master.zip
YOLOv5 🚀 2024-4-11 Python-3.10.12 torch-2.2.2+cu121 CPU

Fusing layers... 
YOLOv5s summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs
Adding AutoShape... 
 * Serving Flask app 'test'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5001
 * Running on http://192.168.0.17:5001
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [11/Apr/2024 22:16:16] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:16:28] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:16:49] "[33mGET /test HTTP/1.1[0m" 404 -
  File "/home/kim/linuxflaskbackend/yolov5/test.py", line 75
    def test()
              ^
SyntaxError: expected ':'
127.0.0.1 - - [11/Apr/2024 22:18:23] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:24] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:24] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:25] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:26] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:27] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:28] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:29] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:29] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:30] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:30] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:31] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:32] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:33] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:18:35] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:19:04] "[33mGET /test HTTP/1.1[0m" 404 -
127.0.0.1 - - [11/Apr/2024 22:20:12] "[33mGET /test HTTP/1.1[0m" 404 -
Downloading: "https://github.com/ultralytics/yolov5/zipball/master" to /home/kim/.cache/torch/hub/master.zip
YOLOv5 🚀 2024-4-11 Python-3.10.12 torch-2.2.2+cu121 CPU

Fusing layers... 
YOLOv5s summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs
Adding AutoShape... 
 * Serving Flask app 'test'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5001
 * Running on http://192.168.0.17:5001
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [11/Apr/2024 22:28:05] "[31m[1mPOST /test HTTP/1.1[0m" 405 -
127.0.0.1 - - [11/Apr/2024 22:28:10] "GET /test HTTP/1.1" 200 -
이미지를 (640, 640) 크기로 변환하여 ./source/1_20240405.jpg에 저장하였습니다.
[34m[1mdetect: [0mweights=['./runs/train/before_addplastic/weights/best.pt'], source=./source/1_20240405.jpg, data=data/coco128.yaml, imgsz=[640, 640], conf_thres=0.3, iou_thres=0.45, max_det=1000, device=, view_img=False, save_txt=False, save_csv=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=runs/detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1
YOLOv5 🚀 2024-4-9 Python-3.10.12 torch-2.2.2+cu121 CPU

Fusing layers... 
YOLOv5s summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs
image 1/1 /home/kim/linuxflaskbackend/yolov5/source/1_20240405.jpg: 640x640 4 recylces, 255.0ms
Speed: 9.0ms pre-process, 255.0ms inference, 9.7ms NMS per image at shape (1, 3, 640, 640)
Results saved to [1mruns/detect/exp[0m
0 labels saved to runs/detect/exp
runs/detect/exp/1_20240405
4
./runs/detect/
127.0.0.1 - - [11/Apr/2024 22:30:04] "POST /receive_img HTTP/1.1" 200 -
이미지를 (640, 640) 크기로 변환하여 ./source/1_20240405.jpg에 저장하였습니다.
[34m[1mdetect: [0mweights=['./runs/train/before_addplastic/weights/best.pt'], source=./source/1_20240405.jpg, data=data/coco128.yaml, imgsz=[640, 640], conf_thres=0.3, iou_thres=0.45, max_det=1000, device=, view_img=False, save_txt=False, save_csv=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=runs/detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1
YOLOv5 🚀 2024-4-9 Python-3.10.12 torch-2.2.2+cu121 CPU

Fusing layers... 
YOLOv5s summary: 157 layers, 7012822 parameters, 0 gradients, 15.8 GFLOPs
image 1/1 /home/kim/linuxflaskbackend/yolov5/source/1_20240405.jpg: 640x640 4 recylces, 308.8ms
Speed: 9.2ms pre-process, 308.8ms inference, 1.9ms NMS per image at shape (1, 3, 640, 640)
Results saved to [1mruns/detect/exp[0m
0 labels saved to runs/detect/exp
runs/detect/exp/1_20240405
127.0.0.1 - - [11/Apr/2024 22:31:05] "POST /send_file HTTP/1.1" 200 -
